# dotchin

./: .bazelrc  .goreleaser.yaml  BUILD.bazel  MODULE.bazel  Makefile  README.org  cache.go  dotchin.go  go.mod  go.sum  helper.go
.github/workflows/: ci.yml
cache/: BUILD.bazel  cache.go
cmd/: BUILD.bazel  main.go
instanceinfo/: BUILD.bazel  aws.go  instanceinfo.go
