load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library")

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "dotchin",
    srcs = [
        "cache.go",
        "dotchin.go",
        "helper.go",
    ],
    importpath = "github.com/taylormonacelli/dotchin",
    visibility = ["//visibility:public"],
    deps = [
        "//instanceinfo",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//:ec2",
        "@com_github_taylormonacelli_forestfish//mymazda",
        "@com_github_taylormonacelli_lemondrop//:lemondrop",
    ],
)
