load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library")

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "dotchin",
    srcs = [
        "dotchin.go",
        "helper.go",
    ],
    importpath = "github.com/taylormonacelli/dotchin",
    visibility = ["//visibility:public"],
    deps = [
        "//cache",
        "//instanceinfo",
        "@com_github_taylormonacelli_forestfish//mymazda",
        "@com_github_taylormonacelli_lemondrop//:lemondrop",
    ],
)
