load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "instanceinfo",
    srcs = [
        "aws.go",
        "instanceinfo.go",
    ],
    importpath = "github.com/taylormonacelli/dotchin/instanceinfo",
    visibility = ["//visibility:public"],
    deps = [
        "//cache",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//:ec2",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//types",
    ],
)
